--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </div>
 
         <div class="photo-frame">
-            <img src="Screenshot_20241014-175748.jpg" alt="Foto Fathin Hamamah">
+            <img src="Screenshot_20241014-175748.jpg" alt="Foto Zaidan Abqari">
         </div>
         <audio id="birthdaySong" src="ultah.mp3" loop></audio>
 
@@ -346,7 +346,7 @@
             const randomMessage = randomMessages[Math.floor(Math.random() * randomMessages.length)];
 
             // Pesan yang akan dikirimkan ke WhatsApp
-          
+            const message = `Assalamualaikum Zaidan Abqari, Selamat Ulang Tahun! 🎉 ${randomMessage} Dari: ${userName}, Tujuan: ${destination}`;
 
             // Membuka WhatsApp dengan pesan yang sudah disertakan
             const phoneNumber = "6287846812535"; // Nomor WhatsApp tujuan tanpa tanda +
